Output/sintactico.txt
//// Gramática del fichero de gramática
//// Conjunto de símbolos terminales
Terminales = { AOLOGIC  ASSIGNATION  BLOCKL  BLOCKR  BOOL_PALRES  CHARS_PALRES  COMA  DIVIDE  EQUALS  EXCLA  FALSE_PALRES  FOR_PALRES  FUNCTION_PALRES  GREATER  GREATERTHAN  ID  IF_PALRES 
INT_PALRES LESS  LESSTHAN  MINUS  MOD  NOASSIG  NUMBER  OLOGIC  PARL  PARR  PLUS  PROMPT_PALRES  RETURN_PALRES  SEMICOLON  STRINGS  TIMES  TRUE_PALRES  VAR_PALRES  WRITE_PALRES  YLOGIC }

//// Conjunto de símbolo no terminales
NoTerminales = { P  S  IDborrar  argv  argv2  comun  cond2  condiciones  constantes  declaraciones  exp2  expMul2  expresiones  expresiones_mul  funciones  ids  sentencias 
sentencias_nulltipo  sentencias_tipo  tipoBool  tipo_id  tipos  idsFuncion  }

//// Axioma
Axioma = P

//// Lista de producciones
Producciones = {
P -> S
S -> sentencias S
S -> sentencias SEMICOLON S
S -> sentencias
sentencias -> declaraciones
sentencias -> funciones
funciones -> FUNCTION_PALRES tipo_id PARL argv PARR BLOCKL sentencias_tipo BLOCKR
funciones -> FUNCTION_PALRES IDborrar PARL argv PARR BLOCKL sentencias_nulltipo BLOCKR
IDborrar -> ID
sentencias_tipo -> declaraciones sentencias_tipo
sentencias_tipo -> RETURN_PALRES expresiones_mul
sentencias_nulltipo -> declaraciones sentencias_nulltipo
sentencias_nulltipo -> RETURN_PALRES
sentencias_nulltipo -> lambda
argv -> argv2
argv -> lambda
argv2 -> tipos COMA argv2
argv2 -> tipos
tipos -> INT_PALRES ID
tipos -> CHARS_PALRES ID
tipos -> BOOL_PALRES ID
tipo_id -> INT_PALRES ID
tipo_id -> CHARS_PALRES ID
tipo_id -> BOOL_PALRES ID
declaraciones -> VAR_PALRES constantes
declaraciones -> WRITE_PALRES PARL expresiones PARR
declaraciones -> PROMPT_PALRES PARL ID PARR
declaraciones -> IF_PALRES PARL condiciones PARR declaraciones
declaraciones -> FOR_PALRES PARL ID ASSIGNATION expresiones SEMICOLON condiciones SEMICOLON ID ASSIGNATION expresiones PARR BLOCKL sentencias_nulltipo BLOCKR
declaraciones -> ID ASSIGNATION expresiones_mul
declaraciones -> ID AOLOGIC ID
declaraciones -> ID PARL idsFuncion PARR
constantes -> CHARS_PALRES ids
constantes -> CHARS_PALRES ID ASSIGNATION STRINGS
constantes -> INT_PALRES ids
constantes -> INT_PALRES ID ASSIGNATION NUMBER
constantes -> BOOL_PALRES ids
constantes -> BOOL_PALRES ID ASSIGNATION tipoBool
tipoBool -> TRUE_PALRES
tipoBool -> FALSE_PALRES
ids -> ID COMA ids
ids -> ID
expresiones_mul -> EXCLA comun
expresiones_mul -> comun expMul2
expMul2 -> cond2
expMul2 -> exp2
expMul2 -> lambda
condiciones -> comun
condiciones -> EXCLA comun
condiciones -> comun cond2
cond2 -> GREATERTHAN condiciones
cond2 -> LESSTHAN condiciones
cond2 -> EQUALS condiciones
cond2 -> NOASSIG condiciones
cond2 -> LESS condiciones
cond2 -> GREATER condiciones
cond2 -> OLOGIC condiciones
cond2 -> YLOGIC condiciones
expresiones -> comun
expresiones -> comun exp2
exp2 -> PLUS expresiones
exp2 -> MINUS expresiones
exp2 -> TIMES expresiones
exp2 -> DIVIDE expresiones
exp2 -> MOD expresiones
expresiones -> STRINGS
comun -> NUMBER
comun -> ID
expresiones_mul -> STRINGS
idsFuncion -> ids
idsFuncion -> lambda
}
